@@ -63,7 +63,12 @@ def encode_string_json(s):
     return '"' + json_escape.sub(lambda m: json_encoding_table[m.group(0)], s) + '"'
 
 
-def render_json(rows, view, group_painters, painters, num_columns, show_checkboxes):
+def render_json(rows, view, group_painters, painters, num_columns, show_checkboxes, export = False):
+    if export:
+        html.req.content_type = "appliation/json; charset=UTF-8"
+        filename = '%s-%s.json' % (view['name'], time.strftime('%Y-%m-%d_%H-%M-%S', time.localtime(time.time())))
+        html.req.headers_out['Content-Disposition'] = 'Attachment; filename=%s' % filename
+
     html.write("[\n")
 
     first = True
@@ -97,9 +102,62 @@ def render_json(rows, view, group_painters, painters, num_columns, show_checkbox
     html.write("\n]\n")
 
 
+multisite_layouts["json_export"] = {
+    "title"  : _("JSON data export"),
+    "render" : lambda a,b,c,d,e,f: render_json(a,b,c,d,e,f,True),
+    "group"  : False,
+    "hide"   : True,
+}
+
 multisite_layouts["json"] = {
     "title"  : _("JSON data output"),
-    "render" : render_json,
+    "render" : lambda a,b,c,d,e,f: render_json(a,b,c,d,e,f,False),
+    "group"  : False,
+    "hide"   : True,
+}
+
+
+def render_csv(rows, view, group_painters, painters, num_columns, show_checkboxes, export = False):
+    if export:
+        html.req.content_type = "text/csv; charset=UTF-8"
+        filename = '%s-%s.csv' % (view['name'], time.strftime('%Y-%m-%d_%H-%M-%S', time.localtime(time.time())))
+        html.req.headers_out['Content-Disposition'] = 'Attachment; filename=%s' % filename
+
+    csv_separator = html.var("csv_separator", ",")
+    first = True
+    for p in painters:
+        if first:
+            first = False
+        else:
+            html.write(csv_separator)
+        content = p[0]["name"]
+        stripped = htmllib.strip_tags(content)
+        stripped = stripped.replace(csv_separator, "\%s" % csv_separator)
+        html.write(stripped.encode("utf-8"))
+
+    for row in rows:
+        html.write("\n")
+        first = True
+        for p in painters:
+            if first:
+                first = False
+            else:
+                html.write(csv_separator)
+            tdclass, content = p[0]["paint"](row)
+            stripped = htmllib.strip_tags(content)
+            stripped = stripped.replace(csv_separator, "\%s" % csv_separator)
+            html.write(stripped.encode("utf-8"))
+
+multisite_layouts["csv_export"] = {
+    "title"  : _("CSV data export"),
+    "render" : lambda a,b,c,d,e,f: render_csv(a,b,c,d,e,f,True),
+    "group"  : False,
+    "hide"   : True,
+}
+
+multisite_layouts["csv"] = {
+    "title"  : _("CSV data output"),
+    "render" : lambda a,b,c,d,e,f: render_csv(a,b,c,d,e,f,False),
     "group"  : False,
     "hide"   : True,
 }
